# math2dl

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: README.md
docs/explanation/: architecture.md
docs/how-to/: development.md  render-animations.md
docs/reference/: tokenizer.md
docs/rnn/: tokenizer.md
src/animations/rnn/: tokenizer.py
src/ann/: __init__.py
src/cnn/: __init__.py
src/common/: __init__.py
src/gans/: __init__.py
src/rnn/: __init__.py  tokenizer.py
src/scripts/: run_tokenizer.py
src/transformers/: __init__.py
